# test-framework

hunit/: test-framework-hunit.cabal
quickcheck2/: test-framework-quickcheck2.cabal
