Cabal-Version:       1.18
Name:                test-framework-quickcheck2
Version:             0.3.0.6
x-revision:          1

Category:            Testing
Synopsis:            QuickCheck-2 support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Andreas Abel
Homepage:            https://github.com/haskell/test-framework#readme
Bug-Reports:         https://github.com/haskell/test-framework/issues
Build-Type:          Simple
Description:         Allows @QuickCheck-2@ properties to be used with the </package/test-framework test-framework package>.

Tested-With:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

extra-doc-files:  ChangeLog.md

Library
        Default-Language:       Haskell2010
        Other-Extensions:       CPP
                                DeriveDataTypeable
                                ExistentialQuantification
                                MultiParamTypeClasses
                                TypeOperators
                                TypeSynonymInstances

        Exposed-Modules:        Test.Framework.Providers.QuickCheck2

        Build-Depends:          test-framework        == 0.8.*
                              , QuickCheck            >= 2.9.2  && < 3
                              , base                  >= 4.9    && < 5
                              , random                >= 1      && < 1.4

        Ghc-Options:            -Wno-deprecations
                                   -- This package is legacy and won't address deprecation warnings.

Source-Repository head
  Type:     git
  Location: https://github.com/haskell/test-framework.git
  subdir:   quickcheck2
